# gms_fastapi-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/core/: jwt.py  security.py
app/db/: mongo.py
app/routes/: auth.py
app/schemas/: auth.py
src/app/: main.py
src/app/config/: settings.py
src/app/constants/: __init__.py  parts.py  service.py
src/app/core/: audit.py  auth.py  exceptions.py  jwt.py  security.py  time.py
src/app/db/: __init__.py  collections.py  indexes.py  mongo.py
src/app/domains/auth/: __init__.py  auth_db.py  auth_logic.py  router.py  schemas.py
src/app/domains/booking/: bookings_db.py  bookings_logic.py  mappers.py  router.py  schemas.py
src/app/domains/parts/: __init__.py  mappers.py  parts_db.py  parts_logic.py  router.py  schemas.py
src/app/domains/service/: mappers.py  router.py  schemas.py  service_db.py  service_logic.py
src/app/domains/supplier/: mappers.py  router.py  schemas.py  supplier_db.py  supplier_logic.py
src/app/middleware/: __init__.py  errors.py
src/app/schemas/: __init__.py  common.py  responses.py
src/app/utils/: __init__.py  object_id.py
tests/: __init__.py  conftest.py
tests/auth/: test_login.py
tests/parts/: test_create.py  test_get.py  test_update.py
tests/service/: test_create.py  test_get.py  test_update.py
